[FIX] web: fix export wizard ui jumps Expanding/collapsing fields in the export wizard caused the modal to resize and shift due to vertical centering, resulting in a flickering effect. This fix aligns the modal to the start.
task~5404802

--- a/addons/web/static/src/views/view_dialogs/export_data_dialog.scss
+++ b/addons/web/static/src/views/view_dialogs/export_data_dialog.scss
@@ -33,3 +33,7 @@
         }
     }
 }
+
+.o_export_data_dialog {
+    align-self: start;
+}
